@@ -1,0 +1,17 @@
+﻿nil subclass: #Object
+!
+
+Object subclass: #Collection
+!
+
+Collection subclass: #List nativeType: @System.Collections.ArrayList
+!
+
+myList := List basicNew
+!
+
+myList add: 1
+!
+
+myList add: 'foo'
+!
